Support jdk 17
Signed-off-by: Hyshmily <cxm8607@outlook.com>